--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -227,6 +227,7 @@
         "ban_user": "Uživatelovi byl změněn stav banu",
         "delete_user": "Uživatelovi byl změněn stav smazání",
         "verify_user": "Uživatelovi byl změněn stav verifikace",
+		"shipment_added": "Transporterovi byla přiřažena vyhraná aukce",
 		"resend_password": "Heslo bylo posláno na váš email",
 		"change_password": "Heslo bylo změněno",
 		"auction_created": "Aukce byla úspěšně založena",
