- předělaná company page - user detail directive - nějaké nové texty
CR: a.dopita OK

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -67,16 +67,26 @@
 		"assignment": "Přiřazování",
 		"win_auction": "Vyhrané aukce",
 		"vacation": "Dovolená",
-		"add_vacation": "Přidat vybranou dovolenou",
-		"delete_vacation": "Smazat vybranou dovolenou",
+		"add_vacation": "Nastavit dovolenou",
+		"delete_vacation": "Odebrat dovolenou",
 		"delete_driver": "Smazat řidiče",
         "admin": "Administrace",
         "users": "Uživatelé",
 		"no_drivers": "Žádní řidiči",
 		"count_of_not_assigned_shipments": "Počet nepřiřazených jízd",
 		"assignment_modal_title": "Přiřaďte řidiče na jízdy",
-		"last_gps_update": "Poslední aktualizace GPS byla před ",
-		"show_current_position": "Zobrazit poslední poziciřidiče",
+		"last_gps_update": "Poslední aktualizace GPS",
+		"show_current_position": "Poslední pozice řidiče",
+		"user": {
+			"detail": "Detail uživatele",
+			"vacation": "Dovolená",
+			"delete": "Odstranění uživatele",
+			"select_date": "Vyberte datum",
+			"my_shipments": "Počet přiřazených/volných jízd",
+			"assign": "Přiřazování jízd",
+			"assign_button": "Přiřadit / Odebrat jízdy",
+			"is_on_vac": "Stav"
+		},
 		"sorting": {
 			"label": "Řazení",
 			"location": "Lokace",
