--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -12,10 +12,10 @@
 		"no_amounts": "Žádné příhozy",
 		"accept_conditions": "Souhlasím s podmínkami",
 		"bid": "Přihodit",
-		"want_bid": "Chcete přihodit?",
-		"auction_complete": "Konec aukce",
-		"auction_win": "Vyhrál jste",
-		"auction_lose": "Nevyhrál jste",
+		"want_bid": "Nová nabídka",
+		"auction_complete": "Aukce již skončila.",
+		"auction_win": "Váše nabídka je nejnižší.",
+		"auction_lose": "Vaše nabídka nebyla nejnižší.",
 		"driver_assign": "Přiřadit řidiče",
 		"assign": "Přiřadit",
 		"login_to_system": "Přihlášení do systému",
@@ -77,6 +77,7 @@
 		"assignment_modal_title": "Přiřaďte řidiče na jízdy",
 		"last_gps_update": "Poslední aktualizace GPS",
 		"show_current_position": "Poslední pozice řidiče",
+		"days": "dny",
 		"user": {
 			"detail": "Detail uživatele",
 			"vacation": "Dovolená",
@@ -161,13 +162,14 @@
 				"8": "Jiné"
 			},
 			"freight_size": "Velikost zásilky (slovy)",
-			"freight_weight": "Váha zásilky v kg",
+			"freight_weight": "Váha zásilky",
 			"email_addressee": "Email adresáta",
 			"end_auction": "Konec aukce",
 			"min_amount": "Minimální příhoz",
 			"history_amount": "Historie příhozů",
 			"maturity": "Splatnost pracovních dní",
 			"driver": "Řidič",
+			"ends_in": "Aukce končí za ",
 			"no_auction": "Žádné dostupné aukce..."
 		}
 	},
