--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -77,6 +77,7 @@
 		"assignment_modal_title": "Assign driver to shipments",
 		"last_gps_update": "Last gps update",
 		"show_current_position": "Show current driver position",
+		"days": "days",
 		"user": {
 			"detail": "User detail",
 			"vacation": "Vacation",
@@ -159,13 +160,14 @@
               "8": "Other"
             },
 			"freight_size": "Freight size (words)",
-			"freight_weight": "Freight weight in kg",
+			"freight_weight": "Freight weight",
 			"email_addressee": "Email addressee",
 			"end_auction": "End auction",
 			"min_amount": "Min amount",
 			"history_amount": "History amount",
 			"maturity": "Working day maturity",
 			"driver": "Driver",
+			"ends_in": "Auction ends in",
 			"no_auction": "No auction"
 		}
 	},
