-prirazování nebude v detailu ale v listu

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -85,7 +85,7 @@
 			"select_date": "Vyberte datum",
 			"my_shipments": "Počet přiřazených/volných jízd",
 			"assign": "Přiřazování jízd",
-			"assign_button": "Přiřadit / Odebrat jízdy",
+			"assign_button": "Přiřazení",
 			"is_on_vac": "Stav"
 		},
 		"sorting": {
