--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -14,8 +14,9 @@
 		"bid": "Bid",
 		"want_bid": "Want bid?",
 		"auction_complete": "End of auction",
-		"auction_win": "You win",
-		"auction_lose": "You did not win",
+		"auction_win": "Your bid is the lowest.",
+		"auction_lose": "Your bid was not the lowest.",
+		"auction_no_bidder": "You were not bidding in this auction.",
 		"driver_assign": "Assign driver",
 		"assign": "Assign",
 		"login_to_system": "Login to system",
