-minnor bug fixing

--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -68,8 +68,8 @@
 		"assignment": "Assignment",
 		"win_auction": "Win auction",
 		"vacation": "Vacation",
-		"add_vacation": "Add selected vacation",
-		"delete_vacation": "Delete selected vacation",
+		"add_vacation": "Add selected",
+		"delete_vacation": "Delete selected",
 		"delete_driver": "Delete driver",
         "admin": "Admin",
         "users": "Users",
@@ -87,8 +87,8 @@
 			"delete": "Delete user",
 			"select_date": "Pick a date",
 			"my_shipments": "Assigned/Free shipments count",
-			"assign": "Assigment of shipments",
-			"assign_button": "Assignments",
+			"assign": "Assignments",
+			"assign_button": "Shipments",
 			"assigned": "Assigned"
 		},
 		"sorting": {
@@ -146,6 +146,7 @@
 			"to": "To",
 			"price": "Price in CZK",
 			"currency": "Currency",
+			"id": "ID",
 			"load": "Load",
 			"load_note": "Note for freight load",
 			"unload": "Unload",
