- info když se nenašte mapa

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -225,7 +225,7 @@
 			"30": "Tato jízda neexistuje",
 			"31": "Tento řidič nemá žádné jízdy",
 			"32": "Tento řidič není ve vaší firmě",
-			"33": "Tento řidič nemá zatím uloženou žádnou pozici",
+			"33": "Tento řidič zatím neuložil svoji pozici.",
 			"34": "Některé jízdy mají jiní řidiči, prosím zkontrolujte si to.",
 			"35": "Tato jízda není přiřazená na tohoto řiriče",
 			"36": "Tento řidič nelze smazat, protože je na něho přiřazená nějaká jízda"
