- velka cena v auction detailu

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -85,6 +85,7 @@
 		"show_less": "Sbalit",
 		"history_next": "Dalších ",
 		"history_next2": " příhozů...",
+		"actual_price": "Aktuální cena",
 		"user": {
 			"detail": "Detail uživatele",
 			"vacation": "Dovolená",
