--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -144,7 +144,7 @@
 			"created_auction": "Created auction",
 			"favourite_auction": "Favourite auction",
 			"create_auction": "Create Auction",
-			"detail": "DETAIL",
+			"detail": "Auction detail",
 			"pickup_places": "Pickup places",
 			"loaded": "Loaded",
 			"from": "From",
