- přidány ikonky na detail aukce/shipmentu - oprava likalizačních hlášek

--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -68,8 +68,8 @@
 		"assignment": "Assignment",
 		"win_auction": "Win auction",
 		"vacation": "Vacation",
-		"add_vacation": "Add selected",
-		"delete_vacation": "Delete selected",
+		"add_vacation": "Add",
+		"delete_vacation": "Delete",
 		"delete_driver": "Delete driver",
         "admin": "Admin",
         "users": "Users",
@@ -169,7 +169,7 @@
               "8": "Other"
             },
 			"freight_size": "Freight size (words)",
-			"freight_weight": "Freight weight",
+			"freight_weight": "Freight weight (kg)",
 			"email_addressee": "Email addressee",
 			"end_auction": "End auction",
 			"min_amount": "Min amount",
