--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -14,7 +14,7 @@
 		"bid": "Přihodit",
 		"want_bid": "Nová nabídka",
 		"auction_complete": "Aukce již skončila.",
-		"auction_win": "Váše nabídka je nejnižší.",
+		"auction_win": "Vaše nabídka je nejnižší.",
 		"auction_lose": "Vaše nabídka nebyla nejnižší.",
 		"auction_no_bidder": "Této aukce jste se neúčastnil.",
 		"driver_assign": "Přiřadit řidiče",
@@ -68,8 +68,8 @@
 		"assignment": "Přiřazování",
 		"win_auction": "Vyhrané aukce",
 		"vacation": "Dovolená",
-		"add_vacation": "Nastavit dovolenou",
-		"delete_vacation": "Odebrat dovolenou",
+		"add_vacation": "Nastavit",
+		"delete_vacation": "Odebrat",
 		"delete_driver": "Smazat řidiče",
         "admin": "Administrace",
         "users": "Uživatelé",
@@ -171,7 +171,7 @@
 				"8": "Jiné"
 			},
 			"freight_size": "Velikost zásilky (slovy)",
-			"freight_weight": "Váha zásilky",
+			"freight_weight": "Váha zásilky (kg)",
 			"email_addressee": "Email adresáta",
 			"end_auction": "Konec aukce",
 			"min_amount": "Minimální příhoz",
