--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -91,7 +91,7 @@
 			"vacation": "Vacation",
 			"delete": "Delete user",
 			"select_date": "Pick a date",
-			"my_shipments": "Assigned/Free shipments count",
+			"my_shipments": "Assigned / Free shipments",
 			"assign": "Assignments",
 			"assign_button": "Shipments",
 			"assigned": "Assigned"
