--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -64,6 +64,7 @@
 		"about_freight": "O zásilce",
 		"more": "Více",
 		"add_driver": "Přidat řidiče",
+		"no_date_selected": "Datum není vybrán",
 		"company": "Moje firma",
 		"assignment": "Přiřazování",
 		"win_auction": "Vyhrané aukce",
@@ -183,6 +184,7 @@
 		}
 	},
 	"errors": {
+		"no_vac_date_selected": "Datum dovolené nebyl zadán",
 		"passwords_not_match" : "Hesla se neshodují",
 		"wrong_login" : "Chyba při přihlašování",
 		"wrong_registration": "Chyba při registraci",
