--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -184,6 +184,8 @@
 		}
 	},
 	"errors": {
+		"username_must_me_greater_eight": "Uživatelské jméno musí mít minimálně 8 znaků",
+		"password_must_me_greater_eight": "Heslo musí mít minimálně 8 znaků",
 		"no_vac_date_selected": "Datum dovolené nebyl zadán",
 		"passwords_not_match" : "Hesla se neshodují",
 		"wrong_login" : "Chyba při přihlašování",
