--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -182,6 +182,8 @@
 		}
 	},
 	"errors": {
+		"username_must_me_greater_eight": "Username must contains minimal 8 characters",
+		"password_must_me_greater_eight": "Password must contains minimal 8 characters",
 		"no_vac_date_selected": "Date for vacation is not selected",
 		"passwords_not_match" : "Passwords do not match",
 		"wrong_login" : "Login error",
