--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -183,6 +183,7 @@
 		}
 	},
 	"errors": {
+		"wrong_email": "Email je ve špatném formátu",
 		"username_must_me_greater_eight": "Uživatelské jméno musí mít minimálně 8 znaků",
 		"password_must_me_greater_eight": "Heslo musí mít minimálně 8 znaků",
 		"phone_number_must_me_greater_none": "Nespravný formát telefoního čísla",
