--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -181,6 +181,7 @@
 		}
 	},
 	"errors": {
+		"wrong_email": "Email has wrong format",
 		"username_must_me_greater_eight": "Username must contains minimal 8 characters",
 		"password_must_me_greater_eight": "Password must contains minimal 8 characters",
 		"phone_number_must_me_greater_none": "Phone number has wrong format",
