- změna hláška při zablokovaném učtu

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -239,7 +239,7 @@
 			"34": "Některé jízdy mají jiní řidiči, prosím zkontrolujte si to.",
 			"35": "Tato jízda není přiřazená na tohoto řiriče",
 			"36": "Tento řidič nelze smazat, protože je na něho přiřazená nějaká jízda",
-			"37": "Váš účet je zablokován na 5 minut."
+			"37": "Váš účet je dočasně zablokován. Zkuste to prosím později."
 		}
 	},
 	"warnings": {
