--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -237,7 +237,7 @@
 			"34": "Some of shipments has another driver, check this.",
 			"35": "This shipment is not assigned to this driver",
 			"36": "This driver cannot be deleted because some shipments is assigned to him",
-			"37": "Your account is blocked for 5 minutes."
+			"37": "Your account is temporary blocked. Please try again later."
 		}
 	},
 	"warnings": {
