- lokalizacní hlaska pro existujici email při registraci

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -229,7 +229,7 @@
 			"22": "Nemáte právo, obraťte se na administratora",
 			"23": "Nemáte právo, obraťte se na administratora",
 			"24": "Heslo není správné",
-			"25": "Uživatel již existuje",
+			"25": "Uživatel nebo email již existuje",
 			"26": "Musíte souhlasit s podmínkami",
 			"27": "Tento uživatel má ban",
 			"28": "Tento uživatel není schválený",
