--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -228,7 +228,7 @@
 			"22": "No rights, contact administrator",
 			"23": "No rights, contact administrator",
 			"24": "Password is incorrect",
-			"25": "Username already exists",
+			"25": "Username or email already exists",
 			"26": "You must accept conditions",
 			"27": "This user is banned",
 			"28": "This user is not verified",
