- obchodní podmínky (gdpr) pdf - ensure dialog pro prihazování na aukci

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -10,8 +10,8 @@
 		"amount": "Příhoz",
 		"driver_licence": "Řidičský průkaz",
 		"no_amounts": "Žádné příhozy",
-		"accept_conditions": "Prohlašuji, že jsem se seznámil/a a souhlasím s Obchodními podmínkami.",
-		"accept_gdpr": "Prohlašuji, že jsem se seznámil/a a souhlasím s Pravidly ochrany osobních údajů.",
+		"accept_conditions_1": "Prohlašuji, že jsem se seznámil/a a souhlasím s ",
+		"accept_conditions_2": "obchodnímy podmínkami a s pravidly ochrany osobních údajů.",
 		"bid": "Přihodit",
 		"want_bid": "Nová nabídka",
 		"auction_complete": "Aukce již skončila.",
@@ -77,10 +77,13 @@
 		"no_drivers": "Žádní řidiči",
 		"count_of_not_assigned_shipments": "Počet nepřiřazených jízd",
 		"assignment_modal_title": "Přiřaďte řidiče na jízdy",
+		"bid_auction_modal_title": "Jste si jistý?",
+		"bid_auction_modal_text": "Vámi zvolená částka je: ",
 		"last_gps_update": "Poslední aktualizace GPS",
 		"show_current_position": "Poslední pozice řidiče",
 		"days": "dny",
 		"save": "Uložit",
+		"ok": "Potvrdit",
 		"cancel": "Zrušit",
 		"show_more": "Rozbalit",
 		"show_less": "Sbalit",
