--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -10,8 +10,8 @@
 		"amount": "Amount",
 		"driver_licence": "Driver licence",
 		"no_amounts": "No amounts",
-		"accept_conditions": "I agree with terms and conditions.",
-		"accept_gdpr": "I agree to the Privacy Policy.",
+		"accept_conditions_1": "I agree with ",
+		"accept_conditions_2": "terms and conditions and GDPR.",
 		"bid": "Bid",
 		"want_bid": "Want bid?",
 		"auction_complete": "End of auction",
@@ -77,10 +77,13 @@
 		"no_drivers": "No drivers",
 		"count_of_not_assigned_shipments": "Count of unassigned shipments",
 		"assignment_modal_title": "Assign driver to shipments",
+		"bid_auction_modal_title": "Are you sure?",
+		"bid_auction_modal_text": "Your bid is: ",
 		"last_gps_update": "Last gps update",
 		"show_current_position": "Show current driver position",
 		"days": "days",
 		"save": "Save",
+		"ok": "OK",
 		"cancel": "Cancel",
         "show_more": "More",
         "show_less": "Less",
