--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -243,7 +243,9 @@
 			"34": "Some of shipments has another driver, check this.",
 			"35": "This shipment is not assigned to this driver",
 			"36": "This driver cannot be deleted because some shipments is assigned to him",
-			"37": "Your account is temporary blocked. Please try again later."
+			"37": "Your account is temporary blocked. Please try again later.",
+			"38": "Please Upload image of type .jpg,.png.",
+			"39": "Please Upload a file upto 1 mb."
 		}
 	},
 	"warnings": {
