- vytváření template pro aukce

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -90,6 +90,7 @@
 		"history_next": "Dalších ",
 		"history_next2": " příhozů...",
 		"actual_price": "Aktuální cena",
+		"create_template": "Vytvoření vzoru pro aukci",
 		"user": {
 			"detail": "Detail uživatele",
 			"vacation": "Dovolená",
@@ -144,6 +145,9 @@
 			"map": "Mapa řidičů"
 		},
 		"auction": {
+			"template_name": "Jméno vzoru",
+			"no_template": "Žádný vzor",
+			"select_template_label": "Vzory pro vytvoření aukce",
 			"info": "Pro zadávání adresy používejte našeptávač, tím zajistíte její správnost. Správnost adresy si lze vyzkoušet zobrazením mapy.",
 			"auction_list": "Aukce",
 			"bids_auction": "Aukce na které přihazuji",
@@ -267,6 +271,7 @@
 		"resend_password": "Heslo bylo posláno na váš email",
 		"change_password": "Heslo bylo změněno",
 		"auction_created": "Aukce byla úspěšně založena",
+		"auction_template_created": "Vzor pro aukci byl vytvořen",
 		"driver_deleted": "Řidič byl smazán",
 		"bid_auction": "Přihození úspěšné"
 	}
